// --------------------------------------------------------------------------------
// SPDX-FileCopyrightText: 2024-2025 Martin Jan KÃ¶hler and Harald Pretl
// Johannes Kepler University, Institute for Integrated Circuits.
//
// This file is part of KPEX 
// (see https://github.com/martinjankoehler/klayout-pex).
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.
// SPDX-License-Identifier: GPL-3.0-or-later
// --------------------------------------------------------------------------------
syntax = "proto3";

package kpex.layout;

import "kpex/layout/layer_ref.proto";
import "kpex/layout/layer_region.proto";

message Device {
    message Parameter {
        uint32 id = 1;
        string name = 10;
        double value = 20;
    }

    message Terminal {
        uint32 id = 1;
        string name = 10;
        string net_name = 11;
        repeated kpex.layout.LayerRegion regions_by_layer = 30;
    }

    uint32 id = 1;
    string device_name = 10;
    string device_class_name = 20;
    string device_abstract_name = 30;
    repeated Parameter parameters = 40;
    repeated Terminal terminals = 50;
}

